--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "14.2.5",
     "next-pwa": "^5.6.0",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
